# HNTechPulse

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  config.yaml  main.py  pyproject.toml  test_single_story_prompt.py  test_voice.py  tmp_content_kw.txt  tmp_debug.txt  tmp_event_cards.txt  tmp_kw.txt
config/: agent.yaml  analyze.yaml  base.yaml  enrich.yaml  hn_sentiment_lexicon.yaml  llm.yaml  prefilter.yaml  remotion.yaml  renderer.yaml  tts.yaml
docs/: AGENT_RUNBOOK.md  PROJECT_STRUCTURE.md  README.md  artifact_quality_review_2026-06-07.md  code_review_2026-06-07.md  comment_stance_classifier.md
prompts/: article_enrich.md  article_summarize.md  comment_analyze.md  comment_judge.md  comment_stance_label.md  cover_prompt.md  daily_brief.md  deep_dive.md  image_select.md  opening_closing.md  persona.md  prefilter.md  publish_guide.md  round1_analyze_story.md  round1_global_decision.md  round1_global_decision_brief.md  round1_global_decision_deep_dive.md  script_gen.md  single_story_scan.md  story_script.md  story_script_quick.md  story_script_standard.md  title.md  translate.md
scripts/: agent_audit.py  agent_clean.py  agent_preflight.py  agent_run.py  agent_status.py  check_text_quality.py  encoding.ps1  fix_content.py  hyperframes_smoke_test.py  inspect_image_selection_llm.py  migrate_data_layout.py  organize_outputs.py  quality_check.py  rebuild_hn_content_for_stance.py  refresh_cover_thumbnail.py  regenerate_text_only.py  remove_failed_items.py  render_hyperframes_from_cli_props.py  render_review_stills.py  review_hyperframes_render.py  review_scene_start_frames.py  test_fetcher.py  test_mimo_tts.py  test_mimo_voice.py  train_comment_stance.py  ts_quality_check.sh  verify_prefilter_selection.py
tests/: conftest.py  test_agent_audit.py  test_agent_decision.py  test_agent_run.py  test_agent_state.py  test_agent_status.py  test_article_enricher.py  test_atomic_io.py  test_audio_alignment.py  test_audio_utils.py  test_backend.py  test_comment_analyzer.py  test_comment_judge.py  test_comment_judgement.py  test_edge_tts.py  (+26 more)
(+172 files in other folders)
