[project]
name = "hn-techpulse"
version = "0.1.0"
description = "Generate tech video from Hacker News"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.20.0",
    "openai>=1.12.0",
    "mutagen>=1.47.0",
    "edge-tts>=6.1.12",
    "tenacity>=8.2.3",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
    "playwright>=1.48.0",
    "brotli>=1.2.0",
    "playwright-stealth>=2.0.3",
    "streamlit>=1.57.0",
    "vaderSentiment>=3.3.2",
    "scikit-learn>=1.3.0",
    "openai-whisper>=20240930",
    "idna>=3.15",
    "starlette>=1.0.1",
    "urllib3>=2.7.0",
    "soundfile>=0.13.1",
]

[project.scripts]
hn-techpulse = "main:main"

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "vulture>=2.16",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
pythonpath = ["."]
